namespace-n2.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: n2
spec: {}
status: {}
