dep-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  progressDeadlineSeconds: 600 #10분내에 Update하지 못하면 취소
  revisionHistoryLimit: 10 # history 제한
  strategy:
    rollingUpdate:
      maxSurge: 50% #현 replica 3 + round((3*0.5)) = 최대 5개
      maxUnavailable: 50% #Terminating 갯수 조절
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14
        ports:
        - containerPort: 80
