st-nginx.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: st-nginx
spec:
  replicas: 3
  serviceName: statefulset-nginx
  podManagementPolicy: OrderedReady
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14
        ports:
        - containerPort: 80
