web-apaches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web-apaches
  name: web-apaches
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-apaches
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-apaches
    spec:
      containers:
      - image: httpd:latest
        name: httpd
        resources: {}
status: {}
