nginx-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
  labels:
    app: dep-nginx
spec:
  type: ClusterIP
  clusterIP: 10.96.96.96
  selector:
    api: dep-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
