service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: dep-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
