service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
  labels:
    app: dep-nginx
spec:
  type: LoadBalancer
  selector:
    app: dep-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
