service-nodeport1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
  labels:
    app: dep-nginx
spec:
  type: NodePort
  clusterIP: 10.96.96.96
  selector:
    app: dep-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32000 # 생략 가능
