marvel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marvel-ingress
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: marvel-service
              port:
                number: 80
        - pathType: Prefix
          path: "/customer"
          backend:
            service:
              name: pay-service
              port:
                number: 80
